# Slicer3D

Trajectory mapper/: CMakeLists.txt
Trajectory mapper/Trajectory/: CMakeLists.txt  Trajectory.py
Trajectory mapper/Trajectory/Resources/UI/: Trajectory.ui
